--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,14 +1,16 @@
-contact: Add your name here
-email: Add your email address here
-created: Add the date you started the experiment here (YYYY-MM-DD)
+contact: Ryan Holmes
+email: ryan.holmes@bom.gov.au
+created: 2023-03-01
 description: |-
-  1 degree ACCESS-OM2 global model configuration under interannual forcing.
+  1 degree ACCESS-OM2 global model configuration under the RYF9091 Repeat
+  Year Forcing strategy outlined by Stewart et al. (2020), 
+  https://doi.org/10.1016/j.ocemod.2019.101557.
   The configuration is based on that described in Kiss et al. (2020),
   https://doi.org/10.5194/gmd-13-401-2020, but with many improvements.
   Initial conditions are WOA13v2 potential temperature and practical salinity.
-  Run with JRA55-do v1.4.0 interannually-varying forcing with all solid runoff
-  converted to liquid runoff with no heat transfer.
-  Spin up starts 1 Jan 1958 and runs to 1 Jan 2019.
+  Run with JRA55-do v1.4.0 RYF9091 (1 May 1990 - 30 April 1991) repeated forcing
+  with all solid runoff converted to liquid runoff with no heat transfer.
+  Spin up starts from a nominal year of 1 Jan 1900.
 notes: |-
   Source code: https://github.com/COSIMA/access-om2
   License: Attribution-NonCommercial-NoDerivatives 4.0 International (http://creativecommons.org/licenses/by-nc-nd/4.0/legalcode)
@@ -22,9 +24,10 @@ notes: |-
   which is supported by the Australian Government."
   (c) let us know of any publications which use these models or data so we can add them to our list:
   https://scholar.google.com/citations?hl=en&user=inVqu_4AAAAJ
+url: https://github.com/rmholmes/1deg_jra55_ryf/tree/era5comp
 keywords:
   - one
   - cosima
   - access-om2-1
   - jra55-do-v1.4.0
-  - iaf
+  - ryf
